--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Area Leader Calendar Tool</title>
+    <title>Cava Area Leader Calendar Tool</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
@@ -85,7 +85,7 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-6">
             <div>
-                <h1 class="text-3xl font-bold text-[#009ef4]">CAVA Area Leader Calendar</h1>
+                <h1 class="text-3xl font-bold text-[#009ef4]">Area Leader Calendar</h1>
                 <p class="text-[#959502]">Schedule your visits for the selected period</p>
             </div>
             <img src="https://cdn.brandfetch.io/idI9TqJPtf/w/400/h/400/theme/dark/icon.jpeg?c=1dxbfHSJFAPEGdCLU4o5B" alt="CAVA Logo" class="h-12 w-12 object-contain mr-4">
