--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
         <header class="mb-8">
             <div class="flex items-center justify-between w-full">
                 <div class="flex items-center">
-                    <div class="w-16 h-16 bg-[#009ef4] rounded-lg flex items-center justify-center text-white font-bold text-xl mr-4">
-                        CAVA
-                    </div>
+                    <img src="https://github.com/Charles-Ehler/Cava-Calendar/blob/main/CavaLogo.png?raw=true" alt="CAVA logo" class="w-32 h-32 rounded-lg object-contain mr-4">
                     <div>
-                        <h1 class="text-3xl font-bold text-[#009ef4]">CAVA Area Leader VISIT Calendar</h1>
+                        <h1 class="text-3xl font-bold text-[#009ef4]">Area Leader Visit Calendar</h1>
                         <p class="text-lg text-[#959502]">Schedule your visits for the selected period</p>
                     </div>
                 </div>
@@ -81,6 +79,13 @@
                 </div>
             </div>
         </header>
+
+        <!-- Instruction Banner -->
+        <div class="mb-4 bg-white p-4 rounded-lg shadow-sm">
+            <p class="text-sm font-medium text-gray-700">
+                Instructions: Select the active period above. Enter your name and the number of restaurants. Then drag visit tiles into the calendar below.
+            </p>
+        </div>
 
         <!-- Period Tabs -->
         <div class="mb-6 overflow-x-auto">
