--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <!-- Instruction Banner -->
         <div class="mb-4 bg-white p-4 rounded-lg shadow-sm">
             <p class="text-sm font-medium text-gray-700">
-                Instructions: Select the active period above. Enter your name and the number of restaurants. Then drag visit tiles into the calendar below.
+                Instructions: Select the active period below. Enter your name and the number of restaurants. Then drag visit tiles into the calendar below.
             </p>
         </div>
 
@@ -405,7 +405,7 @@
             // Update generate button state based on input fields
             function updateGenerateButtonState() {
                 const generateBtn = document.getElementById('generateVisitsBtn');
-                generateBtn.disabled = !(restaurantName && restaurantCount && userName);
+                generateBtn.disabled = !(restaurantName && restaurantCount > 0);
             }
 
             // Set up event listeners
