--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="flex items-center">
                     <img src="https://github.com/Charles-Ehler/Cava-Calendar/blob/main/CavaLogo.png?raw=true" alt="CAVA logo" class="w-32 h-32 rounded-lg object-contain mr-4">
                     <div>
-                        <h1 class="text-3xl font-bold text-[#009ef4]">Area Leader Visit Calendar</h1>
+                        <h1 class="text-3xl font-bold text-[#009ef4]">Ops Leader Visit Calendar</h1>
                         <p class="text-lg text-[#959502]">Schedule your visits for the selected period</p>
                     </div>
                 </div>
