--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!-- Created by Charles Ehler for CAVA Area Leader Tool | July 2025 -->
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
