--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- Instruction Banner -->
         <div class="mb-4 bg-white p-4 rounded-lg shadow-sm">
             <p class="text-sm font-medium text-gray-700">
-                Instructions: Select the active period below. Enter your name and the number of restaurants. Then drag visit tiles into the calendar below.
+                <b>Instructions: </b>Select the active period below. Enter your name and the number of restaurants. Then drag visit tiles into the calendar below.
             </p>
         </div>
 
