--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!-- Created by Charles Ehler for CAVA Area Leader Tool | July 2025 -->
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +9,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <style>
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            75% { transform: translateX(5px); }
+        }
+        .animate-shake {
+            animation: shake 0.15s linear 2;
+        }
+        
         @media print {
             .no-print {
                 display: none !important;
@@ -130,9 +140,10 @@
                     <label for="restaurantCount" class="block text-sm font-medium text-gray-700 mb-1">Number of Restaurants</label>
                     <input type="number" id="restaurantCount" min="1" max="20" value="1" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-[#009ef4]">
                 </div>
-                <button id="generateVisitsBtn" class="w-full px-4 py-3 bg-[#f9d000] text-white rounded-md hover:bg-white hover:text-[#f9d000] focus:outline-none focus:ring-2 focus:ring-[#f9d000] focus:bg-white focus:text-[#f9d000] font-bold disabled:opacity-50 disabled:cursor-not-allowed" disabled>
+                <button id="generateVisitsBtn" class="w-full px-4 py-3 bg-[#f9d000] text-white rounded-md hover:bg-white hover:text-[#f9d000] focus:outline-none focus:ring-2 focus:ring-[#f9d000] focus:bg-white focus:text-[#f9d000] font-bold animate-none transition">
                     Generate Visits
                 </button>
+                <div id="restaurantError" class="text-red-500 text-xs mt-1 hidden">Please enter a restaurant name before generating visits.</div>
                 <div id="visitBank" class="space-y-2 mt-4 hidden">
                     <h2 class="text-xl font-bold text-[#009ef4] mb-4">Visit Bank</h2>
                     <!-- Visit tiles will be generated here -->
@@ -454,8 +465,7 @@
 
             // Update generate button state based on input fields
             function updateGenerateButtonState() {
-                const generateBtn = document.getElementById('generateVisitsBtn');
-                generateBtn.disabled = !(restaurantName && restaurantCount > 0);
+                // No longer disabling the button based on any condition
             }
 
             // Set up event listeners
@@ -485,6 +495,25 @@
                     restaurantName = restaurantNameInput.value;
                     restaurantCount = parseInt(restaurantCountInput.value);
                     userName = userNameInput.value;
+
+                    // Validate restaurant name
+                    if (!restaurantName) {
+                        restaurantNameInput.classList.add('border-red-500');
+                        document.getElementById('restaurantError').classList.remove('hidden');
+                        document.getElementById('generateVisitsBtn').classList.remove('animate-none');
+                        document.getElementById('generateVisitsBtn').classList.add('animate-shake');
+                        
+                        // Remove animation after it completes
+                        setTimeout(() => {
+                            document.getElementById('generateVisitsBtn').classList.remove('animate-shake');
+                            document.getElementById('generateVisitsBtn').classList.add('animate-none');
+                        }, 500);
+                        return;
+                    }
+
+                    // Clear validation if previously shown
+                    restaurantNameInput.classList.remove('border-red-500');
+                    document.getElementById('restaurantError').classList.add('hidden');
 
                     // Initialize remaining uses based on visit type rules
                     visitTypes.forEach(type => {
