--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
         <!-- View Instructions Button -->
-        <button id="viewInstructionsBtn" class="bg-[#87292f] text-[#ff4c0a] font-bold text-sm py-2 px-4 rounded-md mb-4 hover:underline">
+        <button id="viewInstructionsBtn" class="bg-[#fff8e8] text-[#ff020f] font-bold text-sm py-2 px-4 rounded-md mb-4 hover:underline">
             View Instructions
         </button>
 
