--- a/index.html
+++ b/index.html
@@ -184,21 +184,21 @@
         <div class="max-w-4xl mx-auto">
             <h3 class="text-xl font-bold mb-4">Instructions:</h3>
             <ol class="list-decimal pl-5 space-y-2">
-                <li>Enter your name at the top right-hand corner—this will appear on the downloaded calendar.</li>
-                <li>Confirm the period for scheduling.</li>
-                <li>Enter one restaurant's name in the restaurant name field.</li>
-                <li>Input the total number of restaurants in your Garden.
+                <li><strong>Enter your name</strong> at the top right-hand corner—this will appear on the downloaded calendar.</li>
+                <li><strong>Confirm the period</strong> for scheduling.</li>
+                <li><strong>Enter one restaurant’s name</strong> in the restaurant name field.</li>
+                <li><strong>Input the total number of restaurants</strong> in your Garden.
                     <ul class="list-disc pl-5 mt-1">
-                        <li>Note: This number is only used to calculate how many visits remain (displayed at the bottom of the tiles).</li>
+                        <li><em>Note: This number is only used to calculate how many visits remain (displayed at the bottom of the tiles).</em></li>
                     </ul>
                 </li>
-                <li>Click "Generate Visits." This will create all required visits for that restaurant, labeled by type.</li>
-                <li>Place the visits on the calendar.</li>
-                <li>Then return to the restaurant name field, enter the next location, and click "Generate Visits" again to create a new set of tiles for that restaurant.</li>
+                <li>Click <strong>“Generate Visits.”</strong> This will create all required visits for that restaurant, labeled by type.</li>
+                <li><strong>Place the visits</strong> on the calendar.</li>
+                <li>Then return to the restaurant name field, enter the <em>next</em> location, and click <strong>“Generate Visits”</strong> again to create a new set of tiles for that restaurant.</li>
                 <li>Repeat until you have scheduled all required visits for your Garden.</li>
-                <li>Select Download Calendar to send to your RD.
+                <li>Select <strong>Download Calendar</strong> to send to your RD.
                     <ul class="list-disc pl-5 mt-1">
-                        <li>Note: If you need to clear the entire calendar, select Reset Calendar.</li>
+                        <li><em>Note: If you need to clear the entire calendar, select Reset Calendar.</em></li>
                     </ul>
                 </li>
             </ol>
