--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <input type="text" id="restaurantName" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-[#009ef4]" placeholder="Restaurant Name">
                 </div>
                 <div class="mb-4">
-                    <label for="restaurantCount" class="block text-sm font-medium text-gray-700 mb-1">Number of Restaurants</label>
+                    <label for="restaurantCount" class="block text-sm font-medium text-gray-700 mb-1">Number of Restaurants in my Garden</label>
                     <input type="number" id="restaurantCount" min="1" max="20" value="1" class="w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-[#009ef4]">
                 </div>
                 <button id="generateVisitsBtn" class="w-full px-4 py-3 bg-[#f9d000] text-white rounded-md hover:bg-white hover:text-[#f9d000] focus:outline-none focus:ring-2 focus:ring-[#f9d000] focus:bg-white focus:text-[#f9d000] font-bold animate-none transition">
