--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
         <main class="max-w-7xl mx-auto py-6 px-4">
             <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
                 <!-- Visit Bank -->
-                <div id="visitBankSection" class="lg:col-span-4 sticky-visit-bank bg-white rounded-xl shadow-lg p-4 mb-6">
-                    <h3 class="text-xl font-bold text-[#009ef4] mb-4">Visit Bank</h3>
-                    <div id="visitBankContainer" class="space-y-3">
+                <div id="visitBankSection" class="lg:col-span-4 sticky-visit-bank bg-white rounded-xl shadow-lg p-4 mb-6 lg:max-h-[calc(100vh-148px)] lg:overflow-hidden lg:flex lg:flex-col">
+                    <h3 class="text-xl font-bold text-[#009ef4] mb-4 flex-shrink-0">Visit Bank</h3>
+                    <div id="visitBankContainer" class="space-y-3 h-full overflow-y-auto">
                         <!-- Visit tiles will be added here dynamically -->
                     </div>
                     
-                    <div id="summaryStats" class="mt-6 pt-4 border-t border-gray-200">
+                    <div id="summaryStats" class="mt-6 pt-4 border-t border-gray-200 flex-shrink-0">
                         <h4 class="font-semibold text-gray-700 mb-2">Summary</h4>
                         <div class="grid grid-cols-2 gap-2">
                             <div class="bg-gray-100 p-2 rounded">
