--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
                 if (allPerGardenScheduled) {
                     const message = document.createElement('p');
                     message.className = 'text-sm text-green-600 italic mt-2 pl-2';
-                    message.textContent = '✅ All visits scheduled for Per Garden.';
+                    message.textContent = '✅ All visits scheduled.';
                     visitBankContainer.appendChild(message);
                 }
             }
